<?xml version="1.0" encoding="utf-8"?><!--this is the cardView that will fill each row of the recyclerView -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="68dp">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="8dp"
        android:elevation="6dp"
        card_view:cardCornerRadius="4dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/image_view"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="8dp"
                android:clickable="true"
                android:contentDescription="@string/image_view"
                android:focusable="true"
                android:src="@drawable/ic_pic" />

            <TextView
                android:id="@+id/section_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/image_view"
                android:layout_marginStart="8dp"
                android:layout_toEndOf="@+id/image_view"
                android:text="@string/article_section"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/subsection_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/image_view"
                android:layout_toEndOf="@+id/section_view"
                android:text="@string/article_subsection"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/date_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/image_view"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="8dp"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/hint_date"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/title_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/section_view"
                android:layout_alignBaseline="@id/image_view"
                android:layout_marginStart="8dp"
                android:layout_toEndOf="@id/image_view"
                android:text="@string/headline"
                android:textSize="12sp" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>
